--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "nodemon app.js"
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,8 @@
     "body-parser": "^1.20.2",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "mongoose": "^8.5.1"
+    "md5": "^2.3.0",
+    "mongoose": "^8.5.1",
+    "mongoose-encryption": "^2.1.2"
   }
 }
